--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>rheem-basic</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
