feat(rheem-java): add JavaGlobalMaterializedGroupOperator
* Java implementation of GlobalMaterializedGroupOperator
* provide mapping to this basic Operator
* add tests

--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -51,6 +51,14 @@ rheem.java.globalreduce.load = {\
   "p":0.9\
 }
 
+# Not measured but adapted from "rheem.java.globalreduce.load".
+rheem.java.globalgroup.load = {\
+  "in":1, "out":1,\
+  "cpu":"${350000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+
 rheem.java.count.load = {\
   "in":1, "out":1,\
   "cpu":"${4*in0 + 330000}",\
