feat(rheem-java): add JavaIntersectOperator
* implements IntersectOperator
* test it in integration tests

--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -80,6 +80,14 @@ rheem.java.join.load = {\
   "p":0.9\
 }
 
+# NB: Not measured but adapted from rheem.java.join.load.
+rheem.java.intersect.load = {\
+  "in":2, "out":1,\
+  "cpu":"${800*(in0 + in1) + 200*out0 + 1000000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+
 rheem.java.cartesian.load = {\
   "in":2, "out":1,\
   "cpu":"${21*out0 + 900000}",\
