feat(rheem-java): add JavaRepeatOperator
* add operator with mapping
* test in integration tests
* fix: handle missing output ChannelInstances in PushExecutorTemplate

--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -127,6 +127,14 @@ rheem.java.while.load = {\
   "p":0.9\
 }
 
+# NB: Not measured.
+rheem.java.repeat.load = {\
+  "in":2, "out":2,\
+  "cpu":"${810000}",\
+  "ram":"10000",\
+  "p":0.9\
+}
+
 rheem.java.collectionsource.load = {\
   "in":0, "out":1,\
   "cpu":"${4*out0 + 1000000}",\
