--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -3,41 +3,32 @@ rheem.java.cores = 1
 rheem.java.hdfs.ms-per-mb = 2.7
 rheem.java.stretch = 1
 
-rheem.java.union.load = {\
- "in":2,\
- "out":1,\
- "cpu":"${139.1933479423186*out0 + 4982839.526915779}",\
- "ram":"0",\
- "disk":"0",\
- "net":"0",\
- "p":0.9\
-}
 rheem.java.map.load = {\
- "in":1,\
- "out":1,\
- "cpu":"${38.59300957954058*in0 + 342.0504341587955}",\
- "ram":"0",\
- "disk":"0",\
- "net":"0",\
- "p":0.9\
+  "in":1, "out":1,\
+  "cpu":"${55*in0 + 380000}",\
+  "ram":"0",\
+  "p":0.9\
 }
-rheem.java.count.load = {\
- "in":1,\
- "out":1,\
- "cpu":"${3.152533795439214E8*in0 + 3.460224724242598E8}",\
- "ram":"0",\
- "disk":"0",\
- "net":"0",\
- "p":0.9\
+
+rheem.java.filter.load = {\
+  "in":1, "out":1,\
+  "cpu":"${25*in0 + 350000}",\
+  "ram":"100000",\
+  "p":0.9\
 }
+
+rheem.java.flatmap.load = {\
+  "in":1, "out":1,\
+  "cpu":"${563*in0 + 100511687}",\
+  "ram":"10000",\
+  "p":0.9\
+}
+
 rheem.java.reduceby.load = {\
- "in":1,\
- "out":1,\
- "cpu":"${0.029152167466055506*in0 + 3.096127538489327*out0 + 12.91359699586598}",\
- "ram":"0",\
- "disk":"0",\
- "net":"0",\
- "p":0.9\
+  "in":1, "out":1,\
+  "cpu":"${700*in0 + 1040*out0 + 1100000}",\
+  "ram":"10000",\
+  "p":0.9\
 }
 
 rheem.java.groupby.load = {\
@@ -51,6 +42,35 @@ rheem.java.sort.load = {\
   "in":1, "out":1,\
   "cpu":"${2000*in0 + 330000}",\
   "ram":"10000",\
+  "p":0.9\
+}
+
+rheem.java.globalreduce.load = {\
+  "in":1, "out":1,\
+  "cpu":"${25*in0 + 350000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+
+# Not measured but adapted from "rheem.java.globalreduce.load".
+rheem.java.globalgroup.load = {\
+  "in":1, "out":1,\
+  "cpu":"${350000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+
+rheem.java.count.load = {\
+  "in":1, "out":1,\
+  "cpu":"${4*in0 + 330000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+
+rheem.java.distinct.load = {\
+  "in":1, "out":1,\
+  "cpu":"${200*in0 + 700*out0 + 330000}",\
+  "ram":"0",\
   "p":0.9\
 }
 
@@ -76,6 +96,21 @@ rheem.java.cartesian.load = {\
   "p":0.9\
 }
 
+rheem.java.union.load = {\
+  "in":2, "out":1,\
+  "cpu":"1000000",\
+  "ram":"0",\
+  "p":0.9\
+}
+
+# NB: Not measured but adapted from JavaGlobalReduceOperator.
+rheem.java.collect.load = {\
+  "in":1, "out":1,\
+  "cpu":"${25*out0 + 350000}",\
+  "ram":"10000",\
+  "p":0.9\
+}
+
 # NB: Not measured.
 rheem.java.loop.load = {\
   "in":4, "out":3,\
@@ -89,6 +124,44 @@ rheem.java.while.load = {\
   "in":3, "out":2,\
   "cpu":"${500*in2 + 810000}",\
   "ram":"10000",\
+  "p":0.9\
+}
+
+# NB: Not measured.
+rheem.java.repeat.load = {\
+  "in":2, "out":2,\
+  "cpu":"${810000}",\
+  "ram":"10000",\
+  "p":0.9\
+}
+
+rheem.java.collectionsource.load = {\
+  "in":0, "out":1,\
+  "cpu":"${4*out0 + 1000000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+
+# NB: Not measured but adapted from javaLocalCallbackSink.
+rheem.java.localcallbacksink.load = {\
+  "in":1, "out":0,\
+  "cpu":"${28*in0 + 810000}",\
+  "ram":"10000",\
+  "p":0.9\
+}
+
+rheem.java.textfilesource.load = {\
+  "in":0, "out":1,\
+  "cpu":"${425*out0 + 1400000}",\
+  "ram":"${100*out0}",\
+  "p":0.9\
+}
+
+# NB: Not measured.
+rheem.java.objectfilesource.load = {\
+  "in":0, "out":1,\
+  "cpu":"${1500*out0 + 1400000}",\
+  "ram":"${100*out0}",\
   "p":0.9\
 }
 
@@ -123,7 +196,7 @@ rheem.java.tsvfilesink.load = {\
 rheem.java.pagerank.load = {\
  "in":1,\
  "out":1,\
- "cpu":"${5219.029270294375*in0 + 26634.526789785403*out0 + 1.2775981739537635E8}",\
+ "cpu":"${521.029270294375*in0 + 2663.526789785403*out0 + 1.2775981739537635E8}",\
  "ram":"0",\
  "disk":"0",\
  "net":"0",\
