feat(rheem-java): provide JavaMapPartitionsOperator

--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -24,6 +24,13 @@ rheem.java.flatmap.load = {\
   "p":0.9\
 }
 
+rheem.java.mappartitions.load = {\
+  "in":1, "out":1,\
+  "cpu":"${55*in0 + 380000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+
 rheem.java.reduceby.load = {\
   "in":1, "out":1,\
   "cpu":"${700*in0 + 1040*out0 + 1100000}",\
