feat(rheem-core,rheem-platforms): integrate TimeToCostConverter into infrastructure
* the Configuration assigns such an TimeToCostConverter to each Platform
* this is a preparatory step for basing the estimation on arbitrary costs

--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -2,6 +2,8 @@ rheem.java.cpu.mhz = 2700
 rheem.java.cores = 1
 rheem.java.hdfs.ms-per-mb = 2.7
 rheem.java.stretch = 1
+rheem.java.costs.fix = 0.0
+rheem.java.costs.per-ms = 1.0
 
 rheem.java.map.load = {\
   "in":1, "out":1,\
