--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -83,22 +83,67 @@ rheem.java.distinct.load = {\
   "p":0.9\
 }
 
-rheem.java.join.load = {\
+rheem.java.join.load.indexing.pattern {\
+  "in":2, "out":1,\
+  "cpu":"? * min(in0, in1)"\
+}
+rheem.java.join.load.indexing = {\
+  "in":2, "out":1,\
+  "cpu":"${1000*(in0 + in1) + 200*out0 + 1000000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+rheem.java.join.load.probing.pattern {\
+  "in":2, "out":1,\
+  "cpu":"? * max(in0, in1)"\
+}
+rheem.java.join.load.probing = {\
   "in":2, "out":1,\
   "cpu":"${1000*(in0 + in1) + 200*out0 + 1000000}",\
   "ram":"0",\
   "p":0.9\
 }
 
-# NB: Not measured but adapted from rheem.java.join.load.
-rheem.java.intersect.load = {\
+rheem.java.intersect.load.indexing.pattern = {\
   "in":2, "out":1,\
-  "cpu":"${800*(in0 + in1) + 200*out0 + 1000000}",\
+  "cpu":"? * min(in0, in1)"\
+}
+rheem.java.intersect.load.indexing = {\
+  "in":2, "out":1,\
+  "cpu":"${1000*(in0 + in1) + 200*out0 + 1000000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+rheem.java.intersect.load.probing.pattern = {\
+  "in":2, "out":1,\
+  "cpu":"? * max(in0, in1)"\
+}
+rheem.java.intersect.load.probing = {\
+  "in":2, "out":1,\
+  "cpu":"${1000*(in0 + in1) + 200*out0 + 1000000}",\
   "ram":"0",\
   "p":0.9\
 }
 
-rheem.java.cartesian.load = {\
+rheem.java.cartesian.load.indexing.template = {\
+  "in":2, "out":1,\
+  "cpu":"?*min(in0, in1)",\
+  "ram":"0",\
+  "p":0.9\
+}
+rheem.java.cartesian.load.indexing = {\
+  "in":2, "out":1,\
+  "cpu":"${21*out0 + 900000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+rheem.java.cartesian.load.probing.template = {\
+  "in":2, "out":1,\
+  "cpu":"?*in0*in1",\
+  "ram":"0",\
+  "p":0.9\
+}
+rheem.java.cartesian.load.probing = {\
   "in":2, "out":1,\
   "cpu":"${21*out0 + 900000}",\
   "ram":"0",\
@@ -159,7 +204,21 @@ rheem.java.localcallbacksink.load = {\
   "p":0.9\
 }
 
-rheem.java.textfilesource.load = {\
+rheem.java.textfilesource.load.prepare,pattern = {\
+  "in":0, "out":1,\
+  "cpu":"?",\
+}
+rheem.java.textfilesource.load.prepare = {\
+  "in":0, "out":1,\
+  "cpu":"${425*out0 + 1400000}",\
+  "ram":"${100*out0}",\
+  "p":0.9\
+}
+rheem.java.textfilesource.load.main,pattern = {\
+  "in":0, "out":1,\
+  "cpu":"?*out0 + ?",\
+}
+rheem.java.textfilesource.load.main = {\
   "in":0, "out":1,\
   "cpu":"${425*out0 + 1400000}",\
   "ram":"${100*out0}",\
