refactor(rheem-java,rheem-spark,rheem-sqlite3,rheem-postgres): update execution model
* split up single operator executions where appropriate
* provide templates for the learning of cost functions

--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -5,6 +5,10 @@ rheem.java.stretch = 1
 rheem.java.costs.fix = 0.0
 rheem.java.costs.per-ms = 1.0
 
+rheem.java.map.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.map.load = {\
   "in":1, "out":1,\
   "cpu":"${55*in0 + 380000}",\
@@ -12,6 +16,10 @@ rheem.java.map.load = {\
   "p":0.9\
 }
 
+rheem.java.filter.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.filter.load = {\
   "in":1, "out":1,\
   "cpu":"${25*in0 + 350000}",\
@@ -19,6 +27,10 @@ rheem.java.filter.load = {\
   "p":0.9\
 }
 
+rheem.java.flatmap.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.flatmap.load = {\
   "in":1, "out":1,\
   "cpu":"${563*in0 + 100511687}",\
@@ -26,6 +38,10 @@ rheem.java.flatmap.load = {\
   "p":0.9\
 }
 
+rheem.java.mappartitions.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.mappartitions.load = {\
   "in":1, "out":1,\
   "cpu":"${55*in0 + 380000}",\
@@ -33,6 +49,10 @@ rheem.java.mappartitions.load = {\
   "p":0.9\
 }
 
+rheem.java.reduceby.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.reduceby.load = {\
   "in":1, "out":1,\
   "cpu":"${700*in0 + 1040*out0 + 1100000}",\
@@ -40,6 +60,10 @@ rheem.java.reduceby.load = {\
   "p":0.9\
 }
 
+rheem.java.groupby.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.groupby.load = {\
   "in":1, "out":1,\
   "cpu":"${1200*in0 + 330000}",\
@@ -47,6 +71,10 @@ rheem.java.groupby.load = {\
   "p":0.9\
 }
 
+rheem.java.sort.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.sort.load = {\
   "in":1, "out":1,\
   "cpu":"${2000*in0 + 330000}",\
@@ -54,6 +82,10 @@ rheem.java.sort.load = {\
   "p":0.9\
 }
 
+rheem.java.globalreduce.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.globalreduce.load = {\
   "in":1, "out":1,\
   "cpu":"${25*in0 + 350000}",\
@@ -61,7 +93,10 @@ rheem.java.globalreduce.load = {\
   "p":0.9\
 }
 
-# Not measured but adapted from "rheem.java.globalreduce.load".
+rheem.java.globalgroup.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.globalgroup.load = {\
   "in":1, "out":1,\
   "cpu":"${350000}",\
@@ -69,6 +104,10 @@ rheem.java.globalgroup.load = {\
   "p":0.9\
 }
 
+rheem.java.count.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.count.load = {\
   "in":1, "out":1,\
   "cpu":"${4*in0 + 330000}",\
@@ -76,6 +115,10 @@ rheem.java.count.load = {\
   "p":0.9\
 }
 
+rheem.java.distinct.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.distinct.load = {\
   "in":1, "out":1,\
   "cpu":"${200*in0 + 700*out0 + 330000}",\
@@ -150,14 +193,21 @@ rheem.java.cartesian.load.probing = {\
   "p":0.9\
 }
 
+rheem.java.union.load.pattern = {\
+  "in":2, "out":1,\
+  "cpu":"?*in0"\
+}
 rheem.java.union.load = {\
   "in":2, "out":1,\
-  "cpu":"1000000",\
+  "cpu":"200000",\
   "ram":"0",\
   "p":0.9\
 }
 
-# NB: Not measured but adapted from JavaGlobalReduceOperator.
+rheem.java.collect.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*out0 + ?"\
+}
 rheem.java.collect.load = {\
   "in":1, "out":1,\
   "cpu":"${25*out0 + 350000}",\
@@ -165,7 +215,10 @@ rheem.java.collect.load = {\
   "p":0.9\
 }
 
-# NB: Not measured.
+rheem.java.loop.load.pattern = {\
+  "in":4, "out":3,\
+  "cpu":"?*in3 + ?"\
+}
 rheem.java.loop.load = {\
   "in":4, "out":3,\
   "cpu":"${500*in3 + 810000}",\
@@ -173,7 +226,10 @@ rheem.java.loop.load = {\
   "p":0.9\
 }
 
-# NB: Not measured.
+rheem.java.while.load.pattern = {\
+  "in":3, "out":2,\
+  "cpu":"?*in2 + ?"\
+}
 rheem.java.while.load = {\
   "in":3, "out":2,\
   "cpu":"${500*in2 + 810000}",\
@@ -181,7 +237,10 @@ rheem.java.while.load = {\
   "p":0.9\
 }
 
-# NB: Not measured.
+rheem.java.repeat.load.pattern = {\
+  "in":2, "out":2,\
+  "cpu":"?"\
+}
 rheem.java.repeat.load = {\
   "in":2, "out":2,\
   "cpu":"${810000}",\
@@ -189,6 +248,10 @@ rheem.java.repeat.load = {\
   "p":0.9\
 }
 
+rheem.java.collectionsource.load.pattern = {\
+  "in":0, "out":1,\
+  "cpu":"?"\
+}
 rheem.java.collectionsource.load = {\
   "in":0, "out":1,\
   "cpu":"${4*out0 + 1000000}",\
@@ -196,7 +259,10 @@ rheem.java.collectionsource.load = {\
   "p":0.9\
 }
 
-# NB: Not measured but adapted from javaLocalCallbackSink.
+rheem.java.localcallbacksink.load.pattern = {\
+  "in":1, "out":0,\
+  "cpu":"?*in0"\
+}
 rheem.java.localcallbacksink.load = {\
   "in":1, "out":0,\
   "cpu":"${28*in0 + 810000}",\
@@ -206,7 +272,7 @@ rheem.java.localcallbacksink.load = {\
 
 rheem.java.textfilesource.load.prepare,pattern = {\
   "in":0, "out":1,\
-  "cpu":"?",\
+  "cpu":"?"\
 }
 rheem.java.textfilesource.load.prepare = {\
   "in":0, "out":1,\
@@ -216,7 +282,7 @@ rheem.java.textfilesource.load.prepare = {\
 }
 rheem.java.textfilesource.load.main,pattern = {\
   "in":0, "out":1,\
-  "cpu":"?*out0 + ?",\
+  "cpu":"?*out0 + ?"\
 }
 rheem.java.textfilesource.load.main = {\
   "in":0, "out":1,\
@@ -225,7 +291,10 @@ rheem.java.textfilesource.load.main = {\
   "p":0.9\
 }
 
-# NB: Not measured.
+rheem.java.objectfilesource.load.pattern = {\
+  "in":0, "out":1,\
+  "cpu":"?*out0 + ?"\
+}
 rheem.java.objectfilesource.load = {\
   "in":0, "out":1,\
   "cpu":"${1500*out0 + 1400000}",\
@@ -233,7 +302,10 @@ rheem.java.objectfilesource.load = {\
   "p":0.9\
 }
 
-# NB: Not measured.
+rheem.java.objectfilesink.load.pattern = {\
+  "in":1, "out":0,\
+  "cpu":"?*in0 + ?"\
+}
 rheem.java.objectfilesink.load = {\
   "in":1, "out":0,\
   "cpu":"${2000*in0 + 810000}",\
@@ -243,7 +315,10 @@ rheem.java.objectfilesink.load = {\
   "p":0.9\
 }
 
-# NB: Not measured.
+rheem.java.tsvfilesource.load.pattern = {\
+  "in":0, "out":1,\
+  "cpu":"?*out0 + ?"\
+}
 rheem.java.tsvfilesource.load = {\
   "in":0, "out":1,\
   "cpu":"${1500*out0 + 1400000}",\
@@ -251,7 +326,10 @@ rheem.java.tsvfilesource.load = {\
   "p":0.9\
 }
 
-# NB: Not measured.
+rheem.java.tsvfilesink.load.pattern = {\
+  "in":1, "out":0,\
+  "cpu":"?*in0 + ?"\
+}
 rheem.java.tsvfilesink.load = {\
   "in":1, "out":0,\
   "cpu":"${1000*in0 + 810000}",\
@@ -261,6 +339,10 @@ rheem.java.tsvfilesink.load = {\
   "p":0.9\
 }
 
+rheem.java.pagerank.load.pattern = {\
+  "in":1, "out":1,\
+  "cpu":"?*in0 + ?*in0*numIterations + ?"\
+}
 rheem.java.pagerank.load = {\
  "in":1,\
  "out":1,\
