--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -5,7 +5,7 @@ rheem.java.stretch = 1
 rheem.java.costs.fix = 0.0
 rheem.java.costs.per-ms = 1.0
 
-rheem.java.map.load.pattern = {\
+rheem.java.map.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -16,7 +16,7 @@ rheem.java.map.load = {\
   "p":0.9\
 }
 
-rheem.java.filter.load.pattern = {\
+rheem.java.filter.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -27,7 +27,7 @@ rheem.java.filter.load = {\
   "p":0.9\
 }
 
-rheem.java.flatmap.load.pattern = {\
+rheem.java.flatmap.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -38,7 +38,7 @@ rheem.java.flatmap.load = {\
   "p":0.9\
 }
 
-rheem.java.mappartitions.load.pattern = {\
+rheem.java.mappartitions.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -49,7 +49,7 @@ rheem.java.mappartitions.load = {\
   "p":0.9\
 }
 
-rheem.java.reduceby.load.pattern = {\
+rheem.java.reduceby.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -60,7 +60,7 @@ rheem.java.reduceby.load = {\
   "p":0.9\
 }
 
-rheem.java.groupby.load.pattern = {\
+rheem.java.groupby.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -71,7 +71,7 @@ rheem.java.groupby.load = {\
   "p":0.9\
 }
 
-rheem.java.sort.load.pattern = {\
+rheem.java.sort.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -82,7 +82,7 @@ rheem.java.sort.load = {\
   "p":0.9\
 }
 
-rheem.java.globalreduce.load.pattern = {\
+rheem.java.globalreduce.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -93,7 +93,7 @@ rheem.java.globalreduce.load = {\
   "p":0.9\
 }
 
-rheem.java.globalgroup.load.pattern = {\
+rheem.java.globalgroup.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -104,7 +104,7 @@ rheem.java.globalgroup.load = {\
   "p":0.9\
 }
 
-rheem.java.count.load.pattern = {\
+rheem.java.count.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -115,7 +115,7 @@ rheem.java.count.load = {\
   "p":0.9\
 }
 
-rheem.java.distinct.load.pattern = {\
+rheem.java.distinct.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0"\
 }
@@ -193,7 +193,7 @@ rheem.java.cartesian.load.probing = {\
   "p":0.9\
 }
 
-rheem.java.union.load.pattern = {\
+rheem.java.union.load.template = {\
   "in":2, "out":1,\
   "cpu":"?*in0"\
 }
@@ -204,7 +204,7 @@ rheem.java.union.load = {\
   "p":0.9\
 }
 
-rheem.java.collect.load.pattern = {\
+rheem.java.collect.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*out0 + ?"\
 }
@@ -215,7 +215,7 @@ rheem.java.collect.load = {\
   "p":0.9\
 }
 
-rheem.java.loop.load.pattern = {\
+rheem.java.loop.load.template = {\
   "in":4, "out":3,\
   "cpu":"?*in3 + ?"\
 }
@@ -226,7 +226,7 @@ rheem.java.loop.load = {\
   "p":0.9\
 }
 
-rheem.java.while.load.pattern = {\
+rheem.java.while.load.template = {\
   "in":3, "out":2,\
   "cpu":"?*in2 + ?"\
 }
@@ -237,7 +237,7 @@ rheem.java.while.load = {\
   "p":0.9\
 }
 
-rheem.java.repeat.load.pattern = {\
+rheem.java.repeat.load.template = {\
   "in":2, "out":2,\
   "cpu":"?"\
 }
@@ -248,7 +248,7 @@ rheem.java.repeat.load = {\
   "p":0.9\
 }
 
-rheem.java.collectionsource.load.pattern = {\
+rheem.java.collectionsource.load.template = {\
   "in":0, "out":1,\
   "cpu":"?"\
 }
@@ -259,7 +259,7 @@ rheem.java.collectionsource.load = {\
   "p":0.9\
 }
 
-rheem.java.localcallbacksink.load.pattern = {\
+rheem.java.localcallbacksink.load.template = {\
   "in":1, "out":0,\
   "cpu":"?*in0"\
 }
@@ -291,7 +291,7 @@ rheem.java.textfilesource.load.main = {\
   "p":0.9\
 }
 
-rheem.java.objectfilesource.load.pattern = {\
+rheem.java.objectfilesource.load.template = {\
   "in":0, "out":1,\
   "cpu":"?*out0 + ?"\
 }
@@ -302,7 +302,7 @@ rheem.java.objectfilesource.load = {\
   "p":0.9\
 }
 
-rheem.java.objectfilesink.load.pattern = {\
+rheem.java.objectfilesink.load.template = {\
   "in":1, "out":0,\
   "cpu":"?*in0 + ?"\
 }
@@ -315,7 +315,7 @@ rheem.java.objectfilesink.load = {\
   "p":0.9\
 }
 
-rheem.java.tsvfilesource.load.pattern = {\
+rheem.java.tsvfilesource.load.template = {\
   "in":0, "out":1,\
   "cpu":"?*out0 + ?"\
 }
@@ -326,7 +326,7 @@ rheem.java.tsvfilesource.load = {\
   "p":0.9\
 }
 
-rheem.java.tsvfilesink.load.pattern = {\
+rheem.java.tsvfilesink.load.template = {\
   "in":1, "out":0,\
   "cpu":"?*in0 + ?"\
 }
@@ -339,7 +339,7 @@ rheem.java.tsvfilesink.load = {\
   "p":0.9\
 }
 
-rheem.java.pagerank.load.pattern = {\
+rheem.java.pagerank.load.template = {\
   "in":1, "out":1,\
   "cpu":"?*in0 + ?*in0*numIterations + ?"\
 }
