update LoadProfileEstimator templates
* add `"type":"mathex"` where necessary
* add some missing templates for JDBC-based platforms

--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -6,7 +6,7 @@ rheem.java.costs.fix = 0.0
 rheem.java.costs.per-ms = 1.0
 
 rheem.java.map.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.map.load = {\
@@ -17,7 +17,7 @@ rheem.java.map.load = {\
 }
 
 rheem.java.filter.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.filter.load = {\
@@ -28,7 +28,7 @@ rheem.java.filter.load = {\
 }
 
 rheem.java.flatmap.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.flatmap.load = {\
@@ -39,7 +39,7 @@ rheem.java.flatmap.load = {\
 }
 
 rheem.java.mappartitions.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.mappartitions.load = {\
@@ -50,7 +50,7 @@ rheem.java.mappartitions.load = {\
 }
 
 rheem.java.reduceby.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.reduceby.load = {\
@@ -61,7 +61,7 @@ rheem.java.reduceby.load = {\
 }
 
 rheem.java.groupby.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.groupby.load = {\
@@ -72,7 +72,7 @@ rheem.java.groupby.load = {\
 }
 
 rheem.java.sort.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.sort.load = {\
@@ -83,7 +83,7 @@ rheem.java.sort.load = {\
 }
 
 rheem.java.globalreduce.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.globalreduce.load = {\
@@ -94,7 +94,7 @@ rheem.java.globalreduce.load = {\
 }
 
 rheem.java.globalgroup.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.globalgroup.load = {\
@@ -105,7 +105,7 @@ rheem.java.globalgroup.load = {\
 }
 
 rheem.java.count.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.count.load = {\
@@ -116,7 +116,7 @@ rheem.java.count.load = {\
 }
 
 rheem.java.distinct.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.distinct.load = {\
@@ -127,7 +127,7 @@ rheem.java.distinct.load = {\
 }
 
 rheem.java.join.load.indexing.pattern {\
-  "in":2, "out":1,\
+  "type":"mathex", "in":2, "out":1,\
   "cpu":"? * min(in0, in1)"\
 }
 rheem.java.join.load.indexing = {\
@@ -137,7 +137,7 @@ rheem.java.join.load.indexing = {\
   "p":0.9\
 }
 rheem.java.join.load.probing.pattern {\
-  "in":2, "out":1,\
+  "type":"mathex", "in":2, "out":1,\
   "cpu":"? * max(in0, in1)"\
 }
 rheem.java.join.load.probing = {\
@@ -148,7 +148,7 @@ rheem.java.join.load.probing = {\
 }
 
 rheem.java.intersect.load.indexing.pattern = {\
-  "in":2, "out":1,\
+  "type":"mathex", "in":2, "out":1,\
   "cpu":"? * min(in0, in1)"\
 }
 rheem.java.intersect.load.indexing = {\
@@ -158,7 +158,7 @@ rheem.java.intersect.load.indexing = {\
   "p":0.9\
 }
 rheem.java.intersect.load.probing.pattern = {\
-  "in":2, "out":1,\
+  "type":"mathex", "in":2, "out":1,\
   "cpu":"? * max(in0, in1)"\
 }
 rheem.java.intersect.load.probing = {\
@@ -169,7 +169,7 @@ rheem.java.intersect.load.probing = {\
 }
 
 rheem.java.cartesian.load.indexing.template = {\
-  "in":2, "out":1,\
+  "type":"mathex", "in":2, "out":1,\
   "cpu":"?*min(in0, in1)",\
   "ram":"0",\
   "p":0.9\
@@ -181,7 +181,7 @@ rheem.java.cartesian.load.indexing = {\
   "p":0.9\
 }
 rheem.java.cartesian.load.probing.template = {\
-  "in":2, "out":1,\
+  "type":"mathex", "in":2, "out":1,\
   "cpu":"?*in0*in1",\
   "ram":"0",\
   "p":0.9\
@@ -194,7 +194,7 @@ rheem.java.cartesian.load.probing = {\
 }
 
 rheem.java.union.load.template = {\
-  "in":2, "out":1,\
+  "type":"mathex", "in":2, "out":1,\
   "cpu":"?*in0"\
 }
 rheem.java.union.load = {\
@@ -205,7 +205,7 @@ rheem.java.union.load = {\
 }
 
 rheem.java.collect.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*out0 + ?"\
 }
 rheem.java.collect.load = {\
@@ -216,7 +216,7 @@ rheem.java.collect.load = {\
 }
 
 rheem.java.loop.load.template = {\
-  "in":4, "out":3,\
+  "type":"mathex", "in":4, "out":3,\
   "cpu":"?*in3 + ?"\
 }
 rheem.java.loop.load = {\
@@ -227,7 +227,7 @@ rheem.java.loop.load = {\
 }
 
 rheem.java.while.load.template = {\
-  "in":3, "out":2,\
+  "type":"mathex", "in":3, "out":2,\
   "cpu":"?*in2 + ?"\
 }
 rheem.java.while.load = {\
@@ -238,7 +238,7 @@ rheem.java.while.load = {\
 }
 
 rheem.java.repeat.load.template = {\
-  "in":2, "out":2,\
+  "type":"mathex", "in":2, "out":2,\
   "cpu":"?"\
 }
 rheem.java.repeat.load = {\
@@ -249,7 +249,7 @@ rheem.java.repeat.load = {\
 }
 
 rheem.java.collectionsource.load.template = {\
-  "in":0, "out":1,\
+  "type":"mathex", "in":0, "out":1,\
   "cpu":"?"\
 }
 rheem.java.collectionsource.load = {\
@@ -260,7 +260,7 @@ rheem.java.collectionsource.load = {\
 }
 
 rheem.java.localcallbacksink.load.template = {\
-  "in":1, "out":0,\
+  "type":"mathex", "in":1, "out":0,\
   "cpu":"?*in0"\
 }
 rheem.java.localcallbacksink.load = {\
@@ -271,7 +271,7 @@ rheem.java.localcallbacksink.load = {\
 }
 
 rheem.java.textfilesource.load.prepare,pattern = {\
-  "in":0, "out":1,\
+  "type":"mathex", "in":0, "out":1,\
   "cpu":"?"\
 }
 rheem.java.textfilesource.load.prepare = {\
@@ -281,7 +281,7 @@ rheem.java.textfilesource.load.prepare = {\
   "p":0.9\
 }
 rheem.java.textfilesource.load.main,pattern = {\
-  "in":0, "out":1,\
+  "type":"mathex", "in":0, "out":1,\
   "cpu":"?*out0 + ?"\
 }
 rheem.java.textfilesource.load.main = {\
@@ -292,7 +292,7 @@ rheem.java.textfilesource.load.main = {\
 }
 
 rheem.java.objectfilesource.load.template = {\
-  "in":0, "out":1,\
+  "type":"mathex", "in":0, "out":1,\
   "cpu":"?*out0 + ?"\
 }
 rheem.java.objectfilesource.load = {\
@@ -303,7 +303,7 @@ rheem.java.objectfilesource.load = {\
 }
 
 rheem.java.objectfilesink.load.template = {\
-  "in":1, "out":0,\
+  "type":"mathex", "in":1, "out":0,\
   "cpu":"?*in0 + ?"\
 }
 rheem.java.objectfilesink.load = {\
@@ -316,7 +316,7 @@ rheem.java.objectfilesink.load = {\
 }
 
 rheem.java.tsvfilesource.load.template = {\
-  "in":0, "out":1,\
+  "type":"mathex", "in":0, "out":1,\
   "cpu":"?*out0 + ?"\
 }
 rheem.java.tsvfilesource.load = {\
@@ -327,7 +327,7 @@ rheem.java.tsvfilesource.load = {\
 }
 
 rheem.java.tsvfilesink.load.template = {\
-  "in":1, "out":0,\
+  "type":"mathex", "in":1, "out":0,\
   "cpu":"?*in0 + ?"\
 }
 rheem.java.tsvfilesink.load = {\
@@ -340,7 +340,7 @@ rheem.java.tsvfilesink.load = {\
 }
 
 rheem.java.pagerank.load.template = {\
-  "in":1, "out":1,\
+  "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0 + ?*in0*numIterations + ?"\
 }
 rheem.java.pagerank.load = {\
