add cost function keys for Java's sampling operators

--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -38,6 +38,28 @@ rheem.java.flatmap.load = {\
   "p":0.9\
 }
 
+rheem.java.random-sample.load.template = {\
+  "type":"mathex", "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
+rheem.java.random-sample.load = {\
+  "in":1, "out":1,\
+  "cpu":"${25*in0 + 350000}",\
+  "ram":"10000",\
+  "p":0.9\
+}
+
+rheem.java.reservoir-sample.load.template = {\
+  "type":"mathex", "in":1, "out":1,\
+  "cpu":"?*in0"\
+}
+rheem.java.reservoir-sample.load = {\
+  "in":1, "out":1,\
+  "cpu":"${25*in0 + 350000}",\
+  "ram":"10000",\
+  "p":0.9\
+}
+
 rheem.java.mappartitions.load.template = {\
   "type":"mathex", "in":1, "out":1,\
   "cpu":"?*in0"\
