--- a/src/main/resources/rheem-java-defaults.properties
+++ b/src/main/resources/rheem-java-defaults.properties
@@ -169,6 +169,17 @@ rheem.java.join.load.probing = {\
   "p":0.9\
 }
 
+rheem.java.cogroup.load.pattern {\
+  "type":"mathex", "in":2, "out":1,\
+  "cpu":"?*(in0 + in1) + ?*out0 + ?"\
+}
+rheem.java.cogroup.load = {\
+  "in":2, "out":1,\
+  "cpu":"${1000*(in0 + in1) + 200*out0 + 1000000}",\
+  "ram":"0",\
+  "p":0.9\
+}
+
 rheem.java.intersect.load.indexing.pattern = {\
   "type":"mathex", "in":2, "out":1,\
   "cpu":"? * min(in0, in1)"\
