--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,11 @@
 # .idea/compiler.xml
 # .idea/jarRepositories.xml
 # .idea/modules.xml
-# .idea/*.iml
+.idea/*.iml
+.idea/*.xml
+.idea/
 # .idea/modules
-# *.iml
+*.iml
 # *.ipr
 
 # CMake
@@ -144,3 +146,8 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,maven,java
+.idea/jarRepositories.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+rheem-java.iml
